# roads-boats

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: game.cpp  main.cpp
src/buildings/: Building.cpp  Building.h  Primary.h  Secondary.h  utils.h
src/buildings/factories/: Raft_factory.cpp  Raft_factory.h  Rowboat_factory.cpp  Rowboat_factory.h  Steamer_factory.cpp  Steamer_factory.h  Truck_factory.cpp  Truck_factory.h  Wagon_factory.cpp  Wagon_factory.h
src/buildings/producers/: Clay_pit.cpp  Clay_pit.h  Coal_burner.cpp  Coal_burner.h  Mine.cpp  Mine.h  Mint.cpp  Mint.h  Oil_rig.cpp  Oil_rig.h  Papermill.cpp  Papermill.h  Quarry.cpp  Quarry.h  Sawmill.cpp  Sawmill.h  Stock_exchange.cpp  Stock_exchange.h  Stone_factory.cpp  Stone_factory.h  Woodcutter.cpp  Woodcutter.h
src/common/: Errors.h
src/include/: nlohmann_json.hpp
src/players/: Color.h  Player.h
src/portables/: Portable.h  Resource.cpp  Resource.h  Resource_cache.cpp  Resource_cache.h  Transporter.cpp  Transporter.h
src/tiles/: Desert.cpp  Desert.h  Forest.cpp  Forest.h  Hex.cpp  Hex.h  Land.cpp  Land.h  Mountain.cpp  Mountain.h  Plain.cpp  Plain.h  Plains.cpp  Plains.h  Rock.cpp  Rock.h  Sea.cpp  Sea.h  Tile.cpp  Tile.h  Tile_map.cpp  Tile_map.h
src/utils/: file_handler.h  id_utils.h
src/windows/: main.cpp
tests/: Makefile  test_runner.cpp
tests/src/: area_test.cpp  base_test.cpp  building_test.cpp  file_handler_test.cpp  hex_point_test.cpp  hex_test.cpp  resource_test.cpp  river_test.cpp  tile_map_test.cpp  tile_test.cpp
(+60 files in other folders)
